--- a/patents.html
+++ b/patents.html
@@ -67,19 +67,19 @@
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210401&DB=&locale=en_EP&CC=WO&NR=2021061241A1&KC=A1&ND=4">WO2021061241 (A1)</a>. 
                   </p></li>
                   <br>
-                  <li><p align="justify"> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods and apparatus for dynamically routing robots based on exploratory on-board mapping</b>”, 2022. <br>Published as: 
+                  <li><p align="justify"> Leobardo Campos Macias, <b>Rodrigo Aldana-López</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods and apparatus for dynamically routing robots based on exploratory on-board mapping</b>”, 2022. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220426&DB=&locale=en_EP&CC=US&NR=11314254B2&KC=B2&ND=4">US11314254 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">DE102020104358 (A1)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220020A1&KC=A1&ND=4">US2019220020 (A1)</a>.
                   </p></li>
                   <br>
-                  <li><p align="justify">Julio Zamora Esquivel, <b>Rodrigo Aldana Lopez</b> Leobardo Campos Macias, Jesus Cruz Vargas, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Edgar Macias Garcia, “<b>Methods and apparatus to facilitate autonomous navigation of robotic devices</b>”, 2022. <br>Published as: 
+                  <li><p align="justify">Julio Zamora Esquivel, <b>Rodrigo Aldana-López</b> Leobardo Campos Macias, Jesus Cruz Vargas, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Edgar Macias Garcia, “<b>Methods and apparatus to facilitate autonomous navigation of robotic devices</b>”, 2022. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220215&DB=&locale=en_EP&CC=US&NR=11249492B2&KC=B2&ND=4">US11249492 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=5&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">DE102020105045 (A1)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220043A1&KC=A1&ND=4">US2019220043 (A1)</a>. 
                   </p></li>
 				  <br>
-                  <li><p align="justify">Jose Ignacio Parra Vilchis, <b>Rodrigo Aldana Lopez</b>, David Gomez Gutierrez, Rafael De La Guardia Gonzalez, Leobardo Campos Macias, “<b>Hardware accelerator for online estimation</b>”, 2021. <br>Published as: 
+                  <li><p align="justify">Jose Ignacio Parra Vilchis, <b>Rodrigo Aldana-López</b>, David Gomez Gutierrez, Rafael De La Guardia Gonzalez, Leobardo Campos Macias, “<b>Hardware accelerator for online estimation</b>”, 2021. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210914&DB=&locale=en_EP&CC=US&NR=11119507B2&KC=B2&ND=4">US11119507 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=18&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019050370A1&KC=A1">US2019050370 (A1)</a>.
                   </p></li>
@@ -125,7 +125,7 @@
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=11&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190627&CC=US&NR=2019196467A1&KC=A1">US2019196467 (A1)</a>.
                   </p></li>
                   <br>
-                  <li><p align="justify">David Gomez Gutierrez, Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia, Julio Zamora Esquivel, Jose Ignacio Parra Vilchis, David Arditti Ilitzky, “<b>Vision-based cooperative collision avoidance</b>”, 2019. <br>Published as: 
+                  <li><p align="justify">David Gomez Gutierrez, Leobardo Campos Macias, <b>Rodrigo Aldana-López</b>, Rafael De La Guardia, Julio Zamora Esquivel, Jose Ignacio Parra Vilchis, David Arditti Ilitzky, “<b>Vision-based cooperative collision avoidance</b>”, 2019. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200519&DB=&locale=en_EP&CC=US&NR=10657833B2&KC=B2&ND=4">US10657833 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=12&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190607&CC=CN&NR=109859533A&KC=A">CN109859533 (A)</a>,
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190606&DB=&locale=en_EP&CC=DE&NR=102018127144A1&KC=A1&ND=4">DE102018127144 (A1)</a>,
