--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -41,7 +41,7 @@
       <div id="blue">
          <div class="container">
             <div class="row">
-               <h3>Publications [<a href="publications.html">by topic</a> | <a href="publicationsDate.html">by date</a>] </h3>
+               <h3>Publications</h3>
             </div>
             <!-- /row -->
          </div>
