--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -56,11 +56,11 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <ol>
-			<h3 class="big">2023</h3>
+			<h3 class="big">2023</h3><hr><br>
 			<li> <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Machines, invited paper to the Special Issue on Advanced Motion Control of Multiple Robots</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
                   </p></li>
                   <br>
-            <h3 class="big">2022</h3>
+            <h3 class="big">2022</h3><hr><br>
 			<li><p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022.<br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
                   </p></li>
                   <br>
@@ -73,6 +73,8 @@
 
 			<li><p align="justify">Abisaí Ramírez-Pérez, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Jose M. Valencia-Velasco, Luis Pizano-Escalante, Ramon Parra-Michel, “<b>Modular Arithmetic CPM for SDR Platforms</b>”. <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, 2022.<br>[<a style="color:blue" href="publications/tcasii2022.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9684561">publisher link</a>]
                   </p></li><br>
+
+            <h3 class="big">2021</h3><hr><br>
 			</ol>
             </div>
          </div>
