--- a/patents.html
+++ b/patents.html
@@ -53,7 +53,7 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
-<ol>
+<ol reversed>
                   <li><p align="justify">Dave Cavalcanti, David Gómez Gutiérrez, Leobardo Campos Macias, Linda Patricia Osuna Ibarra, <b>Rodrigo Aldana-López</b>, David Arditti Ilitzky, Humberto Caballero Barragan, “<b>Wireless feedback control loops with neural networks to predict target system states</b>”, 2023. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20230110&DB=&locale=en_EP&CC=US&NR=11551058B2&KC=B2&ND=4">US11551058 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">EP3757687 (A1)</a>,
@@ -189,7 +189,7 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
-<ol>
+<ol reversed>
                   <li><p align="justify">David Gomez Gutierrez, Jose Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, “<b>Dynamic generation of restricted flight zones for drones</b>”, 2021. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=3&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210204&CC=US&NR=2021034078A1&KC=A1">US2021034078 (A1)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190704&DB=&locale=en_EP&CC=WO&NR=2019132898A1&KC=A1&ND=4">WO2019132898 (A1)</a>,
