--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -56,7 +56,10 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <ol>
-			<h3 class="big">2023</h3><hr><br>
+               <h3 class="big">Autonomous navigation of UAVs</h3>
+               <hr>
+               <br>
+ 
 			<li> <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Machines, invited paper to the Special Issue on Advanced Motion Control of Multiple Robots</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
                   </p></li>
                   <br>
