--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -56,7 +56,7 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <ol>
-               <h3 class="big">Autonomous navigation of UAVs</h3>
+               <h3 class="big">2023</h3>
                <hr>
                <br>
  
@@ -78,6 +78,43 @@
                   </p></li><br>
 
             <h3 class="big">2021</h3><hr><br>
+			<li><p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDCHO: High order exact dynamic consensus</b>”. <i>Automatica</i>, 2021.<br>[<a style="color:blue" href="publications/automatica2021.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2202.03012">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
+                  </p></li><br>
+		    <li><p align="justify">Hernan Haimovich, Richard Seeber, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy</b>”. <i>IEEE Control Systems Letters</i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
+                  </p></li><br>
+
+			<li><p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b>A predefined-time first-order exact differentiator based on time-varying gains</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
+                  </p></li><br>
+
+			<li><p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b>Generating new classes of fixed-time stable systems with predefined upper bound for the settling time</b>”. <i>International Journal of Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
+                  </p></li><br>
+			<h3 class="big">2020</h3><hr><br>
+			<li><p align="justify">Leobardo Campos-Macías, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
+                     [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a>]
+                  </p></li><br>
+			<li><p align="justify">Miguel Trujillo, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Michael Defoort, Javier Ruiz-León, Hector Becerra, “<b>Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
+                     [<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://link.springer.com/article/10.1007/s11071-020-06075-7">publisher link</a>]
+                  </p></li><br>
+			<li> <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Alexander G. Loukianov, “<b>On predefined-time consensus protocols for dynamic networks</b>”. <i>Journal of the Franklin Institute</i>, 2020.<br>
+                     [<a style="color:blue" href="publications/fi2020.pdf">pdf</a> | <a style="color:blue" href="publications/fi2020.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1910.08450">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S0016003219308622">publisher link</a>]
+                  </p></li><br>
+			<li><p align="justify">Juan D. Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Predefined-time integral sliding mode control of second-order systems</b>”. <i>International Journal of Systems Science</i>, 2020.<br>[<a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion">publisher link</a>]
+                  </p></li><br>
+			<li><p align="justify">J. Valencia-Velasco, O. Longoria-Gandara, <b>Rodrigo Aldana-López</b> and Luis Pizano-Escalante, “<b>Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal</i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
+                  </p></li><br>
+			<h3 class="big">2019</h3><hr><br>
+			<li><p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Michael Defoort, “<b>Enhancing the settling time estimation of a class of fixed-time stable systems</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
+                  </p></li><br>
+			<li><p align="justify"><b>Rodrigo Aldana-López</b> David Gómez-Gutiérrez, Michael Defoort, Juan D. Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, “<b>A class of robust consensus algorithms with predefined-time convergence under switching topologies</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.07545">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.4715">publisher link</a>]
+                  </p></li><br>
+			<h3 class="big">2018</h3><hr><br>
+			<li><p align="justify"><b>Rodrigo Aldana-López</b>, Jose M. Valencia-Velasco, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications</i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
+                  </p></li><br>
+			<h3 class="big">2017</h3><hr><br>
+			<li><p align="justify">Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters</i>, 2017.<br>
+                     [<a style="color:blue" href="publications/ral2017.pdf">pdf</a> | <a style="color:blue" href="publications/ral2017.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=DJ1IZRL5t1Q&t=1s">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1908.08493">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/7822897">publisher link</a>]
+                  </p></li><br>
+
 			</ol>
             </div>
          </div>
