--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -55,7 +55,7 @@
       <div class="container">
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-            <ol>
+            <ol reversed>
                <h3 class="big">2023</h3>
                <hr>
                <br>
