--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -182,33 +182,44 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-			  <ol reversed>
-                
-                     <li><p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
-                        [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
-                     </p></li>
+                  <ol reversed>
+                     <li>
+                        <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
+                           [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
+                        </p>
+                     </li>
                      <br>
-                     <li><p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Attention vs. precision: latency scheduling for uncertainty resilient control systems</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
-                        [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
-                     </p></li>
+                     <li>
+                        <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Attention vs. precision: latency scheduling for uncertainty resilient control systems</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
+                           [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
+                        </p>
+                     </li>
                      <br>
-                     <li><p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDC: Exact Dynamic Consensus</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
-                        [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
-                     </p></li>
+                     <li>
+                        <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDC: Exact Dynamic Consensus</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+                           [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
+                        </p>
+                     </li>
                      <br>
-                     <li><p align="justify">Esteban Jiménez-Rodríguez, <b>Rodrigo Aldana-López</b>, Juan D. Sánchez-Torres, David Gómez-Gutiérrez, Alexander G. Loukianov, “<b>Consistent Discretization of a Class of Predefined-Time Stable Systems</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
-                        [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
-                     </p></li>
+                     <li>
+                        <p align="justify">Esteban Jiménez-Rodríguez, <b>Rodrigo Aldana-López</b>, Juan D. Sánchez-Torres, David Gómez-Gutiérrez, Alexander G. Loukianov, “<b>Consistent Discretization of a Class of Predefined-Time Stable Systems</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+                           [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
+                        </p>
+                     </li>
                      <br>
-                     <li><p align="justify"> <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, Julio Zamora, David Gómez-Gutiérrez, Adan Cruz, “<b>Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
-                        [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
-                     </p></li>
+                     <li>
+                        <p align="justify"> <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, Julio Zamora, David Gómez-Gutiérrez, Adan Cruz, “<b>Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
+                           [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
+                        </p>
+                     </li>
                      <br>
-                     <li><p align="justify">Jose M. Valencia-Velasco, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, “<b>Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
-                        [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
-                     </p></li>
+                     <li>
+                        <p align="justify">Jose M. Valencia-Velasco, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, “<b>Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
+                           [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
+                        </p>
+                     </li>
                      <br>
-			  </ol>
+                  </ol>
                </div>
             </div>
             <br><br>
