--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -48,7 +48,7 @@
          <!-- /container -->
       </div>
       <!-- /blue -->
-      <h3 class="tittle">
+      <h3 class="subtitle">
          <center>Journal articles</center>
       </h3>
       <br><br>
@@ -175,7 +175,7 @@
             </div>
          </div>
          <br><br>
-         <h3  class="tittle">
+         <h3  class="subtitle">
             <center>Conference papers</center>
          </h3>
          <br><br>
