--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                      <div class="block" style="background-image:url(assets/1.png); background-position: center; background-size: 100%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="publications.html">Publications</a>
+                              <a class="custom"  href="publicationsDate.html">Publications</a>
                            </h2>
                         </div>
                      </div>
