--- a/education.html
+++ b/education.html
@@ -30,7 +30,7 @@
                <ul class="nav navbar-nav">
                   <li class="active"><a href="/">Home</a></li>
                   <li ><a href="career.html">Work Experience</a></li>
-                  <li ><a href="publications.html">Publications</a></li>
+                  <li ><a href="publicationsDate.html">Publications</a></li>
                   <li ><a href="education.html">Education</a></li>
                   <li ><a href="patents.html">Patents</a></li>
                   <li ><a href="teaching.html">Teaching</a></li>
