--- a/education.html
+++ b/education.html
@@ -39,13 +39,20 @@
             <!--/.nav-collapse -->
          </div>
       </div>
+      <div id="blue">
+         <div class="container">
+            <div class="row">
+               <h3>Educatio</h3>
+            </div>
+            <!-- /row -->
+         </div>
+         <!-- /container -->
+      </div>
       <br><br><br><br><br>
       <!-- Career Section -->
       <section id="Career" class="container content-section text-center">
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-               <h1 id="career">Education</h1>
-               <br><br>
                <ul class="timeline">
                   <li class="timeline
                      ">
