--- a/education.html
+++ b/education.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <!-- Bootstrap Core CSS -->
-      <link href="/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="/css/main.css">
-      <link rel="stylesheet" href="/files/css/font-awesome/css/font-awesome.min.css">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title> Rodrigo Aldana-López - Education </title>
+      <!-- stylesheets -->
+      <link rel="stylesheet" href="/css/site.css">
+      <link media="all" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+      <link media="all" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
       <link href="/assets/css/style.css" rel="stylesheet">
-      <title>Rodrigo Aldana-López - Education </title>
-      <!-- Custom CSS -->
-      <link href="/css/timeline.css" rel="stylesheet">
+      <link rel="stylesheet" href="/css/main.css">
    </head>
    <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
       <!-- Fixed navbar -->
@@ -42,78 +41,15 @@
       <div id="blue">
          <div class="container">
             <div class="row">
-               <h3>Educatio</h3>
+               <h3>Education</h3>
             </div>
             <!-- /row -->
          </div>
          <!-- /container -->
       </div>
-      <br><br><br><br><br>
-      <!-- Career Section -->
-      <section id="Career" class="container content-section text-center">
-         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-               <ul class="timeline">
-                  <li class="timeline
-                     ">
-                     <div class="timeline-image">
-                        <img class="img-circle img-responsive" src="assets/education/unizar.png" alt="cinvestav_logo">
-                     </div>
-                     <div class="timeline-panel">
-                        <div class="timeline-heading">
-                           <h4>2019 - Today</h4>
-                           <h3>
-                              <p class="blue-text" align="justify"><span class="big">Ph.D. in Systems Engineering and Computer Science</span></p>
-                           </h3>
-                        </div>
-                        <div class="timeline-body">
-                           <p class="text-muted">
-                           <p>University of Zaragoza</p>
-                           </p>
-                           <div class="parent">
-                              <p class="text-muted">
-                              <p align="justify">Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
-                              </p>
-                              <p class="text-muted" align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a>
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                  </li>
-                  <li class="
-                     timeline-inverted
-                     ">
-                     <div class="timeline-image">
-                        <img class="img-circle img-responsive" src="assets/education/iteso.png" alt="iteso_logo">
-                     </div>
-                     <div class="timeline-panel">
-                        <div class="timeline-heading">
-                           <h4>2012 - 2015</h4>
-                           <h4 class="subheading">
-                              <p class="blue-text" align="justify"><span class="big">Bachelor in Electrical Engineering</span></p>
-                           </h4>
-                        </div>
-                        <div class="timeline-body">
-                           <p class="text-muted">
-                           <p>Western Institute of Technology and Higher Education (ITESO)</p>
-                           </p>
-                           <div class="parent">
-                              <p class="text-muted" align="justify">
-                                 Best of his class and graduated with honours.
-                              </p>
-                           </div>
-                           <div class="parent">
-                              <p class="text-muted">
-                              <p>GPA: <span class="color-font">9.9/10.0</span></p>
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </section>
+      <!-- /blue -->
+      
+      
       <div id="footerwrap">
          <div class="container">
             <div class="row">
@@ -138,6 +74,10 @@
          <! --/container -->
       </div>
       <! --/footerwrap -->
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+      <!--<script src="/assets/js/prism.js"></script> -->
+      <script src="/js/site.js"></script>
       <!-- jQuery -->
       <script src="/js/jquery.js"></script>
       <!-- Bootstrap Core JavaScript -->
@@ -146,5 +86,13 @@
       <script src="/js/jquery.easing.min.js"></script>
       <!-- Custom Theme JavaScript -->
       <script src="/js/grayscale.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="/assets/js/bootstrap.min.js"></script>
+      <script src="/assets/js/retina-1.1.0.js"></script>
+      <script src="/assets/js/jquery.hoverdir.js"></script>
+      <script src="/assets/js/jquery.hoverex.min.js"></script>
+      <script src="/assets/js/jquery.prettyPhoto.js"></script>
+      <script src="/assets/js/jquery.isotope.min.js"></script>
+      <script src="/assets/js/custom.js"></script>
    </body>
 </html>
