--- a/education.html
+++ b/education.html
@@ -52,6 +52,8 @@
       <div class="container">
       
       </div>
+      </div>
+      </div>
       <br><br>
       <div id="footerwrap">
          <div class="container">
