--- a/education.html
+++ b/education.html
@@ -50,7 +50,71 @@
       <!-- /blue -->
       <br><br>
       <div class="container">
-      
+      <!-- Career Section -->
+      <section id="Career" class="container content-section text-center">
+         <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+               <ul class="timeline">
+                  <li class="timeline
+                     ">
+                     <div class="timeline-image">
+                        <img class="img-circle img-responsive" src="assets/education/unizar.png" alt="cinvestav_logo">
+                     </div>
+                     <div class="timeline-panel">
+                        <div class="timeline-heading">
+                           <h4>2019 - Today</h4>
+                           <h3>
+                              <p class="blue-text" align="justify"><span class="big">Ph.D. in Systems Engineering and Computer Science</span></p>
+                           </h3>
+                        </div>
+                        <div class="timeline-body">
+                           <p class="text-muted">
+                           <p>University of Zaragoza</p>
+                           </p>
+                           <div class="parent">
+                              <p class="text-muted">
+                              <p align="justify">Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
+                              </p>
+                              <p class="text-muted" align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a>
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                  </li>
+                  <li class="
+                     timeline-inverted
+                     ">
+                     <div class="timeline-image">
+                        <img class="img-circle img-responsive" src="assets/education/iteso.png" alt="iteso_logo">
+                     </div>
+                     <div class="timeline-panel">
+                        <div class="timeline-heading">
+                           <h4>2012 - 2015</h4>
+                           <h4 class="subheading">
+                              <p class="blue-text" align="justify"><span class="big">Bachelor in Electrical Engineering</span></p>
+                           </h4>
+                        </div>
+                        <div class="timeline-body">
+                           <p class="text-muted">
+                           <p>Western Institute of Technology and Higher Education (ITESO)</p>
+                           </p>
+                           <div class="parent">
+                              <p class="text-muted" align="justify">
+                                 Best of his class and graduated with honours.
+                              </p>
+                           </div>
+                           <div class="parent">
+                              <p class="text-muted">
+                              <p>GPA: <span class="color-font">9.9/10.0</span></p>
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </section>
       </div>
       </div>
       </div>
