--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="navbar-collapse collapse navbar-right">
                <ul class="nav navbar-nav">
-                  <li class="active"><a href="/">Home</a></li>
+                  <li class="active"><a href="/">Home1</a></li>
                   <li ><a href="career.html">Work Experience</a></li>
                   <li ><a href="publicationsDate.html">Publications</a></li>
                   <li ><a href="education.html">Education</a></li>
