--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="/">Rodrigo Aldana-López</a>
+               <a class="navbar-brand" href="/">Rodrigo Aldana-López1</a>
             </div>
             <div class="navbar-collapse collapse navbar-right">
                <ul class="nav navbar-nav">
