--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="/">Rodrigo Aldana-López</a>
+               <a class="navbar-brand" href="/">Rodrigo Aldana-López1</a>
             </div>
             <div class="navbar-collapse collapse navbar-right">
                <ul class="nav navbar-nav">
-                  <li class="active"><a href="/">Home1</a></li>
+                  <li class="active"><a href="/">Home</a></li>
                   <li ><a href="career.html">Work Experience</a></li>
                   <li ><a href="publicationsDate.html">Publications</a></li>
                   <li ><a href="education.html">Education</a></li>
