--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
       <div class="container">
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+               <div class="pub_list">
                <h3 class="big">Autonomous navigation of UAVs</h3>
                <hr>
                <br>
@@ -128,6 +129,7 @@
                <p align="justify"><b>Rodrigo Aldana-López</b>, Jose M. Valencia-Velasco, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications</i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
                </p>
                <br>
+               </div>
             </div>
          </div>
          <br><br>
@@ -138,6 +140,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                  <div class="pub_list">
                   <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
                      [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
                   </p>
@@ -162,6 +165,7 @@
                      [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
                   </p>
                   <br>
+                  </div>
                </div>
             </div>
             <br><br>
