--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -55,6 +55,7 @@
       <div class="container">
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+               <div class="pub_list">
                <ol reversed>
                   <h3 class="big">2023</h3>
                   <hr>
@@ -172,6 +173,7 @@
                   </li>
                   <br>
                </ol>
+			   </div>
             </div>
          </div>
          <br><br>
@@ -182,6 +184,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                  <div class="pub_list">
                   <ol reversed>
                      <li>
                         <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
@@ -220,6 +223,7 @@
                      </li>
                      <br>
                   </ol>
+                  </div>
                </div>
             </div>
             <br><br>
