--- a/education.html
+++ b/education.html
@@ -24,11 +24,11 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="/">Rodrigo Aldana-López4</a>
+               <a class="navbar-brand" href="/">Rodrigo Aldana-López</a>
             </div>
             <div class="navbar-collapse collapse navbar-right">
                <ul class="nav navbar-nav">
-                  <li class="active"><a href="/"><font size="+0.1">Home</font></a></li>
+                  <li class="active"><a href="/">Home</a></li>
                   <li ><a href="career.html">Work Experience</a></li>
                   <li ><a href="publications.html">Publications</a></li>
                   <li ><a href="education.html">Education</a></li>
