--- a/teaching.html
+++ b/teaching.html
@@ -55,7 +55,7 @@
                <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3>
                <hr>
                <br>
-               <p align="justify"><b>Computer architecture (Undergraduate level). Principal instructor</b>: This course offers a comprehensive overview of the fundamental concepts of computer organization and architecture, covering a range of topics including the history of computing, the power wall, various instruction set architectures, critical paths, pipeline design, and cache memory. Students apply their knowledge by using Verilog to develop a replica of a classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly language. This hands-on approach provides students with a deeper understanding of the inner workings of computer systems and the interplay between hardware and software.</p>
+               <p align="justify"><b>Computer architecture (Undergraduate). Principal instructor</b>: This course offers a comprehensive overview of the fundamental concepts of computer organization and architecture, covering a range of topics including the history of computing, the power wall, various instruction set architectures, critical paths, pipeline design, and cache memory. Students apply their knowledge by using Verilog to develop a replica of a classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly language. This hands-on approach provides students with a deeper understanding of the inner workings of computer systems and the interplay between hardware and software.</p>
                <ul>
                   <li> Summer 2019</li>
                   <li> Spring 2019</li>
@@ -64,7 +64,7 @@
                   <li> Autumn 2016</li>
                </ul>
                <br>
-               <p align="justify"><b>Embedded systems II (Undergraduate level). Principal instructor</b>: This course covers advanced topics in embedded systems, including real-time scheduling, basic kernel development, and the use of advanced peripherals like USB and Ethernet with TCP/IP. Students gain hands-on experience with the FRDMK64F board, a platform that offers a comprehensive set of features for the development of a wide range of embedded applications. Through this course, they deepen their understanding of the key concepts and techniques involved in the design and implementation of advanced embedded systems.
+               <p align="justify"><b>Embedded systems II (Undergraduate). Principal instructor</b>: This course covers advanced topics in embedded systems, including real-time scheduling, basic kernel development, and the use of advanced peripherals like USB and Ethernet with TCP/IP. Students gain hands-on experience with the FRDMK64F board, a platform that offers a comprehensive set of features for the development of a wide range of embedded applications. Through this course, they deepen their understanding of the key concepts and techniques involved in the design and implementation of advanced embedded systems.
                <p>
                <ul>
                   <li> Autumn 2018</li>
@@ -75,20 +75,20 @@
                <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3>
                <hr>
                <br>
-               <p align="justify"><b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</b>: This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.
+               <p align="justify"><b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate). Assistant/technical instructor (~20% of the course)</b>: This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.
                <p>
                <ul>
                   <li> Autumn 2018</li>
                   <li> Autumn 2016</li>
                </ul>
                <br>
-               <p align="justify"><b> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course):</b> This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.
+               <p align="justify"><b> Embedded Software with application to the control of Aerial Robots (Master). Assistant/technical instructor (~20% of the course):</b> This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.
                <p>
                <ul>
                   <li> Spring 2017</li>
                </ul>
                <br>
-               <p align="justify"><b> Embedded Systems (Graduate level). Assistant instructor (~10% of the course):</b> This segment of the course explores the fundamental principles of real-time kernel programming using the FRDMK64F board as a platform.
+               <p align="justify"><b> Embedded Systems (Master). Assistant instructor (~10% of the course):</b> This segment of the course explores the fundamental principles of real-time kernel programming using the FRDMK64F board as a platform.
                <p>
                <ul>
                   <li> Autumn 2017</li>
