--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -49,7 +49,7 @@
       </div>
       <!-- /blue -->
       <h3>
-         <center>Journal articles</center>
+         <center>Journal papers</center>
       </h3>
       <br><br>
       <div class="container">
