--- a/publications.html
+++ b/publications.html
@@ -106,6 +106,9 @@
                   <br>
                   <h3 class="big">Exact differentiation algorithms</h3>
                   <hr>
+			      <br>
+                  <p align="justify">David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Richard Seeber, Marco Tulio Angulo, Leonid Fridman, “<b>An arbitrary-order exact differentiator with predefined convergence time bound for signals with exponential growth bound</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.00822">arxiv</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.110995">publisher link</a>]
+                  </p>
                   <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Richard Seeber, David Gómez-Gutiérrez, Marco Tulio Angulo, Michael Defoort, “<b>A redesign methodology generating predefined-time differentiators with bounded time-varying gains</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2022.<br>[<a style="color:blue" href="publications/ijrnc2022.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.06429">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/10.1002/rnc.6315">publisher link</a>]
                   </p>
