--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -61,6 +61,11 @@
                   <hr>
                   <br>
                   <li>
+                     <p align="justify">David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Richard Seeber, Marco Tulio Angulo, Leonid Fridman, “<b>An arbitrary-order exact differentiator with predefined convergence time bound for signals with exponential growth bound</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.00822">arxiv</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.110995">publisher link</a>]
+                  </p>
+                  </li>
+                  <br>
+                  <li>
                      <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Machines, invited paper to the Special Issue on Advanced Motion Control of Multiple Robots</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
                      </p>
                   </li>
