--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,10 @@
                   <h3 class="big">Asynchronous perception in robot control</h3>
                   <hr>
                   <br>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Perception-latency aware distributed target tracking</b>”. <i>Information Fusion</i>, 2023.<br>
+                     [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link</a>]
+                  </p>
+                  <br>
                   <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
                      [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
                   </p>
