--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -61,6 +61,12 @@
                   <hr>
                   <br>
                   <li>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Perception-latency aware distributed target tracking</b>”. <i>Information Fusion</i>, 2023.<br>
+                     [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link</a>]
+                  </p>
+                  </li>
+                  <br>
+                  <li>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Eduardo Sebastián, Rosario Aragüés, Eduardo Montijano, Carlos Sagüés, “<b>Distributed outer approximation of the intersection of ellipsoids</b>”. <i>IEEE Control Systems Letters</i>, 2023.<br> [<a style="color:blue" href="https://arxiv.org/pdf/2305.15172">pdf</a> | <a style="color:blue" href="publications/lcss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10136818">publisher link</a>]
                   </p>
                   </li>
