--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -60,6 +60,12 @@
                   <h3 class="big">2023</h3>
                   <hr>
                   <br>
+				  <li>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Latency vs precision: Stability preserving perception scheduling</b>”. <i>Automatica</i>, 2023.<br>
+                     [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access document)</a>]
+                  </p>
+				  </li>
+                  <br>
                   <li>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Perception-latency aware distributed target tracking</b>”. <i>Information Fusion</i>, 2023.<br>
                      [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link</a>]
