--- a/publications.html
+++ b/publications.html
@@ -99,8 +99,12 @@
                   <h3 class="big">Asynchronous perception in robot control</h3>
                   <hr>
                   <br>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Latency vs precision: Stability preserving perception scheduling</b>”. <i>Automatica</i>, 2023.<br>
+                     [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access document)</a>]
+                  </p>
+                  <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Perception-latency aware distributed target tracking</b>”. <i>Information Fusion</i>, 2023.<br>
-                     [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link</a>]
+                     [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link (open access document)</a>]
                   </p>
                   <br>
                   <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
