--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -62,13 +62,13 @@
                   <br>
 				  <li>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Latency vs precision: Stability preserving perception scheduling</b>”. <i>Automatica</i>, 2023.<br>
-                     [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access document)</a>]
+                     [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access)</a>]
                   </p>
 				  </li>
                   <br>
                   <li>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Perception-latency aware distributed target tracking</b>”. <i>Information Fusion</i>, 2023.<br>
-                     [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link</a>]
+                     [<a style="color:blue" href="publications/infuss2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.inffus.2023.101857">publisher link (open access)</a>]
                   </p>
                   </li>
                   <br>
