--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -73,7 +73,7 @@
                   </li>
                   <br>
                   <li>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, Eduardo Sebastián, Rosario Aragüés, Eduardo Montijano, Carlos Sagüés, “<b>Distributed outer approximation of the intersection of ellipsoids</b>”. <i>IEEE Control Systems Letters</i>, 2023. Presented at 62th IEEE Conference on Decision and Control (CDC).<br> [<a style="color:blue" href="https://arxiv.org/pdf/2305.15172">pdf</a> | <a style="color:blue" href="publications/lcss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10136818">publisher link</a>]
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Eduardo Sebastián, Rosario Aragüés, Eduardo Montijano, Carlos Sagüés, “<b>Distributed outer approximation of the intersection of ellipsoids</b>”. <i>IEEE Control Systems Letters</i>, 2023.  <a style="color:teal">Presented at 62th IEEE Conference on Decision and Control (CDC).</a><br> [<a style="color:blue" href="https://arxiv.org/pdf/2305.15172">pdf</a> | <a style="color:blue" href="publications/lcss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10136818">publisher link</a>]
                   </p>
                   </li>
                   <br>
