--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0;URL='https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be'">
+  <title>Robust Affine Formation Tracking</title>
 </head>
 <body>
-  Redirecting...
+  <h1>Robust Affine Formation Tracking - video</h1>
+
+  <video width="640" height="360" controls>
+    <source src="utils/affinevideo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <p>Description</p>
 </body>
 </html>
