--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -11,6 +11,6 @@
     Your browser does not support the video tag.
   </video>
 
-  <p>Description</p>
+  <p> Results from the work "Robust Affine Formation Tracking". Blue circles represent leader positions, red circles represent follower positions and blue crosses represent the positions of the followers in the target configuration given the current positions of the leaders. The agents manage to get to their positions regardless of the persistent motion of the leaders.</p>
 </body>
 </html>
