--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>Robust Affine Formation Tracking</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+    }
+  </style>
 </head>
 <body>
   <div style="width: 640px; margin: 0 auto;"> <!-- Set the width to match the video's width and center the container -->
