--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -2,14 +2,9 @@
 <html>
 <head>
   <title>Robust Affine Formation Tracking</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-    }
-  </style>
 </head>
 <body>
-  <div style="width: 640px; margin: 0 auto;"> <!-- Set the width to match the video's width and center the container -->
+  <div style="width: 640px; margin: 0 auto; font-family: 'Arial', sans-serif;"> <!-- Set the width to match the video's width and center the container -->
     <h1>Robust Affine Formation Tracking - video</h1>
 
     <video width="640" height="360" controls style="display: block;"> <!-- Make sure the video fills the full width of its container -->
@@ -17,7 +12,7 @@
       Your browser does not support the video tag.
     </video>
 
-    <p style="width: 100%; box-sizing: border-box; padding: 10px;"> <!-- Make the paragraph occupy the full width of its container (the same as the video) -->
+    <p style="width: 100%; box-sizing: border-box; padding: 10px; text-align: justify;"> <!-- Make the paragraph occupy the full width of its container (the same as the video) and justify the text -->
       Results from the work "Robust Affine Formation Tracking". Blue circles represent leader positions, red circles represent follower positions and blue crosses represent the positions of the followers in the target configuration given the current positions of the leaders. The agents manage to get to their positions regardless of the persistent motion of the leaders.
     </p>
   </div>
