added PLATE paper

--- a/publications.html
+++ b/publications.html
@@ -98,6 +98,10 @@
                   <br>
                   <h3 class="big">Asynchronous perception in robot control</h3>
                   <hr>
+				  <br>
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>PLATE: A perception-latency aware estimator</b>”. <i>ISA Transactions</i>, 2023.<br>
+                     [<a style="color:blue" href="publications/isa2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.isatra.2023.08.013">publisher link (open access)</a>]
+                  </p>
                   <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Latency vs precision: Stability preserving perception scheduling</b>”. <i>Automatica</i>, 2023.<br>
                      [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access)</a>]
