--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -61,6 +61,12 @@
                   <hr>
                   <br>
 				  <li>
+				  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>PLATE: A perception-latency aware estimator</b>”. <i>ISA Transactions</i>, 2023.<br>
+                     [<a style="color:blue" href="publications/isa2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.isatra.2023.08.013">publisher link (open access)</a>]
+                  </p>
+				  </li>
+                  <br>
+				  <li>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Latency vs precision: Stability preserving perception scheduling</b>”. <i>Automatica</i>, 2023.<br>
                      [<a style="color:blue" href="publications/automatica2023b.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.111123">publisher link (open access)</a>]
                   </p>
