--- a/publications.html
+++ b/publications.html
@@ -137,6 +137,9 @@
                   <h3 class="big">Fixed-time stability in control systems</h3>
                   <hr>
                   <br>
+                  <p align="justify"><b><b>Rodrigo Aldana-López</b>, Richard Seeber, Hernan Haimovich, David Gómez-Gutiérrez, “<b>On inherent limitations in robustness and performance for a class of prescribed-time algorithms</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023a.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023a.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2205.02528">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S000510982300448X?via%3Dihub">publisher link</a>]
+                  </p>
+                  <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b>Generating new classes of fixed-time stable systems with predefined upper bound for the settling time</b>”. <i>International Journal of Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
                   </p>
                   <br>
