--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -59,6 +59,11 @@
                <ol reversed>
                   <h3 class="big">2023</h3>
                   <hr>
+				  <br>
+				  <li>
+                  <p align="justify"><b><b>Rodrigo Aldana-López</b>, Richard Seeber, Hernan Haimovich, David Gómez-Gutiérrez, “<b>On inherent limitations in robustness and performance for a class of prescribed-time algorithms</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023a.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023a.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2205.02528">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S000510982300448X?via%3Dihub">publisher link</a>]
+                  </p>
+				  </li>
                   <br>
 				  <li>
 				  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>PLATE: A perception-latency aware estimator</b>”. <i>ISA Transactions</i>, 2023.<br>
