Added book chapter

--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -211,7 +211,27 @@
          </div>
          <br><br>
          <h3>
-            <center>Conference papers</center>
+<center>Book chapters</center>
+         </h3>
+         <br><br>
+         <div class="container">
+            <div class="row">
+               <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                  <div class="pub_list">
+                  <ol reversed>
+                     <li>
+                        <p align="justify"><b>Rodrigo Aldana-López</b>, Richard Seeber, Hernan Haimovich, David Gómez-Gutiérrez, “<b>Designing Controllers with Predefined Convergence-Time Bound Using Bounded Time-Varying Gains</b>”. <i>In: Oliveira, T.R., Fridman, L., Hsu, L. (eds) Sliding-Mode Control and Variable-Structure Systems. Studies in Systems, Decision and Control, vol 490. Springer</i>, 2023.<br>
+                           [<a style="color:blue" href="smcvss2023.pdf">pdf</a> | <a style="color:blue" href="publications/smcvss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2311.02473">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-37089-2_3">publisher link</a>]
+                        </p>
+                     </li>
+                     <br>
+                  </ol>
+                  </div>
+               </div>
+            </div>
+            <br><br>
+         </div>
+         <center>Conference papers</center>
          </h3>
          <br><br>
          <div class="container">
