--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -221,7 +221,7 @@
                   <ol reversed>
                      <li>
                         <p align="justify"><b>Rodrigo Aldana-López</b>, Richard Seeber, Hernan Haimovich, David Gómez-Gutiérrez, “<b>Designing Controllers with Predefined Convergence-Time Bound Using Bounded Time-Varying Gains</b>”. <i>In: Oliveira, T.R., Fridman, L., Hsu, L. (eds) Sliding-Mode Control and Variable-Structure Systems. Studies in Systems, Decision and Control, vol 490. Springer</i>, 2023.<br>
-                           [<a style="color:blue" href="smcvss2023.pdf">pdf</a> | <a style="color:blue" href="publications/smcvss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2311.02473">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-37089-2_3">publisher link</a>]
+                           [<a style="color:blue" href="publications/smcvss2023.pdf">pdf</a> | <a style="color:blue" href="publications/smcvss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2311.02473">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-37089-2_3">publisher link</a>]
                         </p>
                      </li>
                      <br>
