--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -2,6 +2,14 @@
 <html>
 <head>
   <title>Homogeneous Observer-Based Affine Formation Tracking</title>
+  <style>
+  .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Set the height of the container to full viewport height */
+  }
+</style>
 </head>
 <body>
   <div style="width: 640px; margin: 0 auto; font-family: 'Arial', sans-serif;"> <!-- Set the width to match the video's width and center the container -->
