--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -2,20 +2,11 @@
 <html>
 <head>
   <title>Homogeneous Observer-Based Affine Formation Tracking</title>
-  <style>
-  .center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Set the height of the container to full viewport height */
-  }
-</style>
 </head>
 <body>
   <div style="width: 640px; margin: 0 auto; font-family: 'Arial', sans-serif;"> <!-- Set the width to match the video's width and center the container -->
-    <div class="center">
-  <h1>Homogeneous Observer-Based Affine Formation Tracking - video</h1>
-</div>
+  <h1 style="text-align: center;">Homogeneous Observer-Based Affine Formation Tracking - video</h1>
+
 
     <video width="640" height="360" controls style="display: block;"> <!-- Make sure the video fills the full width of its container -->
       <source src="affinevideoV2.mp4" type="video/mp4">
