--- a/education.html
+++ b/education.html
@@ -84,9 +84,8 @@
             </p>
 
             <p class="text-muted" align="justify">
-               Awards: Extraordinary Doctoral Award (UNIZAR);
-               Accessit for Best PhD Thesis in Control Systems (CEA);
-               Best European PhD Thesis in Control Systems (EECI).
+               Awards: Best European PhD Thesis in Control Systems (EECI); Extraordinary Doctoral Award (UNIZAR);
+               Accessit for Best PhD Thesis in Control Systems (CEA);               
             </p>
          </div>
       </div>
