--- a/teaching.html
+++ b/teaching.html
@@ -55,6 +55,14 @@
                <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3>
                <hr>
                <br>
+               
+               <p align="justify"><b>Probability and Stochastic Processes (Gaduate level). Principal instructor</b>: This course covered probability spaces, random variables, common distributions, conditioning, limit theorems, discrete time Markov chains, and basic stochastic processes, with programming based numerical exercises to connect theory with practice.</p>
+<ul>
+   <li> Autumn 2024</li>
+</ul>
+<br>
+
+               
                <p align="justify"><b>Computer architecture (Undergraduate level). Principal instructor</b>: This course offers a comprehensive overview of the fundamental concepts of computer organization and architecture, covering a range of topics including the history of computing, the power wall, various instruction set architectures, critical paths, pipeline design, and cache memory. Students apply their knowledge by using Verilog to develop a replica of a classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly language. This hands-on approach provides students with a deeper understanding of the inner workings of computer systems and the interplay between hardware and software.</p>
                <ul>
                   <li> Summer 2019</li>
