--- a/teaching.html
+++ b/teaching.html
@@ -56,7 +56,7 @@
                <hr>
                <br>
                
-               <p align="justify"><b>Probability and Stochastic Processes (Gaduate level). Principal instructor</b>: This course covered probability spaces, random variables, common distributions, conditioning, limit theorems, discrete time Markov chains, and basic stochastic processes, with programming based numerical exercises to connect theory with practice.</p>
+               <p align="justify"><b>Probability and Stochastic Processes (Graduate level). Principal instructor</b>: This course covered probability spaces, random variables, common distributions, conditioning, limit theorems, discrete time Markov chains, and basic stochastic processes, with programming based numerical exercises to connect theory with practice.</p>
 <ul>
    <li> Autumn 2024</li>
 </ul>
